platform/gitops/components/data/postgres/cnpg-operator/patch-ha-deployment-cnpg-operator-cloudnative-pg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnpg-operator-cloudnative-pg
  namespace: cnpg-system
spec:
  replicas: 2
  template:
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: cloudnative-pg
                    app.kubernetes.io/instance: cnpg-operator
                topologyKey: kubernetes.io/hostname
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: cloudnative-pg
              app.kubernetes.io/instance: cnpg-operator
