platform/gitops/components/data/postgres/cnpg-operator/patch-operator-image-env-deployment-cnpg-operator-cloudnative-pg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnpg-operator-cloudnative-pg
  namespace: cnpg-system
spec:
  template:
    spec:
      containers:
        - name: manager
