platform/gitops/components/data/postgres/cnpg-operator/patch-vpa-requests-deployment-cnpg-operator-cloudnative-pg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnpg-operator-cloudnative-pg
  namespace: cnpg-system
spec:
  template:
    spec:
      containers:
        - name: manager
          resources:
            requests:
              cpu: "15m"
              memory: "96Mi"
            limits:
              memory: "144Mi"
